# greentea-client

./: .astylerc  .gitignore  .lgtm.yml  CMakeLists.txt  Config.cmake.in  README.md  codecov.yml  coverage.json  module.json
.github/workflows/: pr-check.yml
cmake/: GitVersion.cmake
example/: main.cpp
examples/custom_io/: CMakeLists.txt  main.cpp
examples/pty/: CMakeLists.txt  example_host.py  main.cpp
examples/stdio/: CMakeLists.txt
greentea-client/: CHANGELOG.md  state_in.h  state_out.h  test_env.h
include/greentea-client/: test_env.h  test_io.h
source/: greentea_metrics.cpp  greentea_test_env.cpp  greentea_test_io.c  state_in.cpp  state_out.cpp  test_env.cpp
test/host_tests/: reset_test.py
test/reset/: main.cpp
test/select/: main.cpp
test/shuffle/: main.cpp
tests/: CMakeLists.txt
tests/doubles/: CMakeLists.txt  fake_console_io.cpp  fake_console_io.h
tests/integration/imported-targets/: CMakeLists.txt  main.cpp
tests/unit/: CMakeLists.txt  test_kv_protocol.cpp
